--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -289,6 +289,17 @@ section.sectionBG:hover {
     color:rgb(206, 23, 223);
     margin: 0 0.2rem;
 }
+footer .Myposition {
+    position: relative;
+}
+footer img {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    right: 20px;
+    bottom: 10px;
+    z-index: 30;
+}
 /* footer {
     font-size: 1.5rem;
     white-space: nowrap;
