--- a/css/coffee-contact-style.css
+++ b/css/coffee-contact-style.css
@@ -272,7 +272,7 @@ footer img {
     font-size: 1.5rem;
     white-space: nowrap;
 }
-
+*/
 footer .Myposition {
     position: relative;
 }
@@ -284,4 +284,4 @@ footer img {
     right: 20px;
     bottom: 10px;
     z-index: 30;
-} */
+}
