--- a/css/coffee-store-location.css
+++ b/css/coffee-store-location.css
@@ -305,7 +305,7 @@ footer img {
     font-size: 1.5rem;
     white-space: nowrap;
 }
-
+*/
 footer .Myposition {
     position: relative;
 }
@@ -316,4 +316,4 @@ footer img {
     right: 20px;
     bottom: 10px;
     z-index: 30;
-} */
+}
