--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -304,7 +304,7 @@ footer img {
     font-size: 1.5rem;
     white-space: nowrap;
 }
-
+*/
 footer .Myposition {
     position: relative;
 }
@@ -315,4 +315,4 @@ footer img {
     right: 20px;
     bottom: 10px;
     z-index: 30;
-} */
+}
